Litlle error corected
Mis-spell corrected

--- a/Pasithea/KarenLocalize/Pasithea.bundle/Portuguese.lproj/Localizable.strings
+++ b/Pasithea/KarenLocalize/Pasithea.bundle/Portuguese.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 "FOLLOW_HIRAKUJIRA" = "Seguir @hirakujira";
 "FOLLOW_KAREN" = "Seguir @angelXwind";
 
-"WATCH_THE_VIDEO" = "Visualizar o VÌdeo";
+"WATCH_THE_VIDEO" = "Visualizar o Vídeo";
 "WATCH_THE_VIDEO_DETAIL" = "O vídeo de lançamento do Pasithea está disponível através do YouTube e do Youku. Por favor escolha o serviçoo de vídeo.";
 "YOUTUBE" = "YouTube";
 "YOUKU" = "Youku";
